build: 添加环境变量配置以支持GitHub集成
添加 GITHUB_OWNER、GITHUB_REPO、GITHUB_BRANCH 和 GITHUB_TOKEN 环境变量到 Wrangler 配置，为后续实现 GitHub API 集成做准备。

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -2,6 +2,12 @@
   "compatibility_date": "2025-07-03",
   "name": "cf-redirect-group",
   "main": "worker.js",
+  "vars": {
+    "GITHUB_OWNER": "olinll",
+    "GITHUB_REPO": "cf-redirect-group",
+    "GITHUB_BRANCH": "main",
+    "GITHUB_TOKEN":""
+  },
     "observability": {
     "enabled": false,
     "head_sampling_rate": 1,
